search across all address books fails
Categories
(MailNews Core :: Address Book, defect, P1)
Tracking
(thunderbird74 unaffected)
Tracking | Status | |
---|---|---|
thunderbird74 | --- | unaffected |
People
(Reporter: wsmwk, Assigned: darktrojan)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
8.41 KB,
patch
|
Details | Diff | Splinter Review |
Eckard can you reproduce this?
I'm using Nightly build on Mac, but I'd bet it also happens with beta.
Open address book
It opens to All Address Books
Put in a search term that should only have one or two hits
Actual Results: ALL address book entries are listed
Expected results: Only one or two hits
This doesn't happen on Windows (beta, I didn't test nightly). I'm guessing this caused by the presence of the Mac Address Book, in connection with the AB rewrite. Regression?
Is there a way to disable the display/use of the Mac AB? I couldn't find it, and I couldn't delete it from TB preferences.
Assignee | ||
Comment 1•5 years ago
|
||
You can delete/recreate the Mac address book from the menu of the address book window. I couldn't make this happen on Mac with 74beta2, but I can on 75, which makes more sense given bug 1614265.
Assignee | ||
Comment 2•5 years ago
|
||
… or should be able to, but that appears to be broken since I last looked at it. :-(
Comment 3•5 years ago
|
||
Also on Windows searching through all Address Books doesn't work (only TB ABs, no LDAP or Winsows AB). I have to switch to a Address Book to make the search working.
Updated•5 years ago
|
Comment 4•5 years ago
|
||
I confirm that the search in "All Address Books" doesn't work in Thunderbird Daily 75.0a1.
It still works in Thunderbird 74.0b1.
Running macOS 10.14.6
Assignee | ||
Comment 5•5 years ago
|
||
I can see what I broke. Fixing it should be interesting…
Assignee | ||
Comment 6•5 years ago
|
||
When the concept of a root address book was removed, we lost a way to send the search URI to the tree view. I've put it back and added a test to hopefully stop it happening again.
Assignee | ||
Updated•5 years ago
|
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/2bccccc84b8c
Fix searching across all address books. r=mkmelin (via chat)
Assignee | ||
Updated•5 years ago
|
Reporter | ||
Updated•5 years ago
|
Description
•