Bug 1617797 - Fix searching across all address books. r=mkmelin (via chat)

When the concept of a root address book was removed, we lost a way to send the search URI to the tree view.

--HG--
extra : amend_source : e4107b1f84c4108bf82e8f1c262c140fc7b8fc7c
extra : histedit_source : 57539781bad165713ec5b2ed41be87b74a3e926b